[package]
name = "wasm_project"
version = "0.1.0"
authors = ["deniss"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# access js functions in Rust
wasm-bindgen = "0.2.63"
wasm-pack = "0.9.1"
